# vibe-token

./: Cargo.toml  README.md  canister_ids.json  dfx.json  package-lock.json  package.json  webpack.config.js
.github/workflows/: release.yaml
src/common/: Cargo.toml
src/common/src/: lib.rs
src/token_sale/: Cargo.toml  token_sale.did
src/token_sale/src/: lib.rs
src/vibe_backend/: Cargo.toml  vibe_backend.old.did
src/vibe_backend/src/: functions.rs
src/vibe_frontend/assets/: main.css
src/vibe_frontend/src/: index.html  index.js  index.jsx
src/vibe_frontend/src/canvas/: Earth.jsx
src/vibe_frontend/src/components/: Balance.jsx  Faucet.jsx  Header.jsx  Landing.jsx  Loader.jsx  Transfer.jsx
src/vibe_frontend/src/components/Button/: Button.jsx  Button.module.scss
src/vibe_frontend/src/components/Web3Authorization/: Web3Authorization.jsx
src/vibe_frontend/src/components/Web3Authorization/AuthModal/: AuthModal.jsx
src/vibe_frontend/src/components/Web3Authorization/AuthModalBody/: AuthModalBody.jsx  AuthModalBody.module.scss
src/vibe_frontend/src/components/Web3Authorization/RequireWeb3Auth/: RequireWeb3Auth.jsx
src/vibe_frontend/src/hooks/: useTokenSale.jsx  useWeb3Identity.jsx
src/vibe_token/: Cargo.toml
src/vibe_token/src/: lib.rs  tests.rs
