[package]
name = "token_sale"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.7.14"
hex = "0.4.3"
ic-cdk = "0.5.2"
ic-cdk-macros = "0.5.2"
serde = "1.0.160"
serde_bytes = "0.11.9"
common = { path="../common" }
